# futu-stock-skill

./: .env.example  .gitignore  IDENTITY.md  README.md  SKILL.md  SOUL.md  USER.md  manifest.json  pyproject.toml
src/: server.py
src/backtest/: engine.py  metrics.py
src/futu_client/: __init__.py  client.py  types.py
src/storage/: __init__.py  db.py
src/tools/: __init__.py  account.py  analytics.py  backtest.py  market_data.py  monitor.py  setup.py  strategy.py  trading.py
